# rust_os

./: Cargo.toml  README.md
src/: lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
